@@ -70,6 +70,8 @@ Core
 * Fixed error where the wrong tag name can sometimes appear in [calc] error
   messages (#7).
 
+* Superfluous Vend::Interpolate::sort_cart function removed (#70).
+
 UserDB
 ------
 
